# django-jsonform

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  setup.cfg
.github/: FUNDING.yml
.github/workflows/: tests.yml
django_jsonform/: __init__.py  apps.py  constants.py  exceptions.py  urls.py  utils.py  validators.py  views.py  widgets.py
django_jsonform/contrib/: README.md
django_jsonform/forms/: compat.py  fields.py
django_jsonform/models/: compat.py  fields.py
django_jsonform/templatetags/: django_jsonform.py
docs/: conf.py  examples.rst  fields-and-widgets.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  schema.rst  settings.rst  templatetags.rst  troubleshooting.rst  usage.rst  utils.rst
docs/_ext/: helpers.py
docs/_static/: candy.css
docs/_templates/: layout.html
docs/guide/: arrayfield.rst  autocomplete.rst  choices.rst  coordinates.rst  index.rst  inputs.rst  javascript.rst  translations.rst  upload.rst  validation.rst
docs/releases/: index.rst  v1.0.0.rst  v2.0.0.rst  v2.1.0.rst  v2.10.0.rst  v2.10.1.rst  v2.11.0.rst  v2.11.1.rst  v2.12.0.rst  v2.13.0.rst  v2.14.0.rst  v2.15.0.rst  v2.16.0.rst  v2.16.1.rst  v2.17.0.rst  v2.17.1.rst  v2.17.2.rst  v2.17.3.rst  v2.17.4.rst  v2.18.0.rst  v2.19.0.rst  v2.19.1.rst  v2.2.0.rst  v2.2.1.rst  v2.20.0.rst  v2.20.1.rst  v2.20.2.rst  v2.21.0.rst  v2.21.1.rst  v2.21.2.rst  v2.21.3.rst  v2.21.4.rst  v2.21.5.rst  v2.22.0.rst  v2.23.0.rst  v2.23.1.rst  (+9 more)
tests/: __main__.py  django_settings.py  test_templatetags.py  test_utils.py  test_validators.py  test_widgets.py
(+14 files in other folders)
